--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">Changed by Kumar/a>.</p>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">Automation Server/a>.</p>
 </div>
